# tetrox

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
client/: Cargo.toml  index.html
client/public/: input-range-style.css  style.css
client/src/: animation.rs  board.rs  canvas.rs  config.rs  game.rs  game_stats.rs  goal.rs  input.rs  main.rs  menu.rs  stats.rs  timer.rs  util.rs
client_old/: Cargo.toml  index.html
client_old/src/: board.rs  canvas.rs  config.rs  input.rs  main.rs
server/: Cargo.toml
src/: field.rs  kicks.rs  lib.rs  spins.rs  tetromino.rs
src/pieces/: mino123.rs  mino1234.rs  mod.rs  pentomino.rs  tetromino.rs
