[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tetrox = { path = "../" }

yew = "0.19.3"
gloo-timers = "0.2.3"
getrandom = { version = "0.2.5", features = ["js"] }
wasm-bindgen = "0.2.79"

strum = "0.24"
strum_macros = "0.24"

[dependencies.web-sys]
version = "0.3.56"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement"]
