[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tetrox = { path = "../" }

sycamore = "0.8.0-beta.4"
sycamore-router = "0.8.0-beta.4"

getrandom = { version = "0.2.5", features = ["js"] }
js-sys = "0.3.57"
wasm-bindgen = "0.2.79"
gloo-timers = "0.2.3"

bimap = { version = "0.6.2", features = ["serde"] }
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.56"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlSelectElement",
    "InputEvent",
    "Storage",
    "Window",
]
